--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,7 +1,8 @@
 
 footer{
-    padding-top: 1.875rem;
+    padding-top: 3.125rem;
     background-color: black;
+    border-top: 1px solid grey;
     .section-footer{
         display: flex;
         justify-content: center;
