--- a/scss/layout/_main-cursos.scss
+++ b/scss/layout/_main-cursos.scss
@@ -269,7 +269,7 @@ main {
     }
 
     .registro {
-        padding-left: 180px;
+        padding-left: 11.25rem;
         padding-bottom: 9.375rem;
 
         .titulo-registro {
