--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,12 @@
 @import "./layout/main-cursos";
 @import "./layout/main-examenes";
 @import "./layout/main-material";
+@import "./layout/main-contacto";
 @import "./layout/media1024";
 @import "./layout/media768";
 @import "./layout/media425";
 @import "./layout/media320";
+@import "./layout/media1024-cursos";
+@import "./layout/media768-cursos";
+@import "./layout/media425-cursos";
+@import "./layout/media320-cursos";
