--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,3 +18,11 @@
 @import "./layout/media768-cursos";
 @import "./layout/media425-cursos";
 @import "./layout/media320-cursos";
+@import "./layout/media1024-examenes";
+@import "./layout/media768-examenes";
+@import "./layout/media425-examenes";
+@import "./layout/media320-examenes";
+@import "./layout/media1024-material";
+@import "./layout/media768-material";
+@import "./layout/media425-material";
+@import "./layout/media320-material";
