--- a/css/style.css
+++ b/css/style.css
@@ -1790,5 +1790,66 @@ main .recuerda {
     font-size: 2.5rem;
   }
 }
+@media (max-width: 1024px) {
+  main section .titulos-superiores-contacto {
+    padding-left: 15%;
+  }
+  main .medios-de-contacto .callcenter-contacto img {
+    width: 100%;
+    padding-left: 10%;
+  }
+  main .recuerda {
+    padding-left: 15%;
+  }
+}
+@media (max-width: 768px) {
+  main section .titulos-superiores-contacto {
+    padding-left: 12%;
+  }
+  main .medios-de-contacto .callcenter-contacto img {
+    width: 80%;
+    padding-left: 15%;
+  }
+  main .recuerda {
+    padding-left: 12%;
+  }
+}
+@media (max-width: 425px) {
+  main section .titulos-superiores-contacto {
+    padding-left: 0;
+  }
+  main section .titulos-superiores-contacto h2 {
+    font-size: 1.5625rem;
+    text-align: center;
+  }
+  main section .titulos-superiores-contacto h1 {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+  main .medios-de-contacto {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, auto);
+    grid-template-areas: "WhatsApp" "Messenger" "Teléfono" "CallCenter";
+    gap: 1.875rem;
+  }
+  main .recuerda {
+    padding-left: 0;
+    text-align: center;
+    font-size: 0.75rem;
+    margin: 0 10%;
+  }
+}
+@media (max-width: 320px) {
+  main section .titulos-superiores-contacto {
+    margin: 0 10%;
+  }
+  main section .titulos-superiores-contacto h2 {
+    font-size: 1.375rem;
+    padding-bottom: 0.3125rem;
+  }
+  main section .titulos-superiores-contacto h1 {
+    font-size: 2.1875rem;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
