--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,3 +26,7 @@
 @import "./layout/media768-material";
 @import "./layout/media425-material";
 @import "./layout/media320-material";
+@import "./layout/media1024-contacto";
+@import "./layout/media768-contacto";
+@import "./layout/media425-contacto";
+@import "./layout/media320-contacto";
