--- a/css/style.css
+++ b/css/style.css
@@ -269,11 +269,21 @@ main .section-grids {
   display: grid;
   grid-template-columns: auto 21% 21% 21% auto;
   grid-template-rows: auto;
+  grid-template-areas: ". medicina administración diseño .";
+  align-items: center;
+  padding-top: 6.25rem;
+  padding-bottom: 3.125rem;
+  gap: 3.4375rem;
+  /*
+  display: grid;
+  grid-template-columns: auto 21% 21% 21% auto;
+  grid-template-rows: auto;
   grid-template-areas: ". medicina  administración diseño . ";
   align-items: center;
   padding-top: 6.25rem;
   padding-bottom: 3.125rem;
   gap: 3.4375rem;
+  */
 }
 main .section-grids .tarjeta-medicina a:visited {
   text-decoration: none;
@@ -292,12 +302,21 @@ main .section-grids .tarjeta-medicina {
 }
 main .section-grids .tarjeta-medicina .medicina .titulo-tarjeta-medicina {
   color: #1d60e9;
-  font-family: "DM Sans", sans-serif;
+  font-family: "DM Sans";
   font-weight: 700;
   text-decoration: underline;
   font-size: 1.5625rem;
   text-align: center;
   padding-bottom: 0.625rem;
+  /*
+  color: #1d60e9;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 1.5625rem;
+  text-align: center;
+  padding-bottom: .625rem;
+  */
 }
 main .section-grids .tarjeta-medicina .medicina .parrafo-superior-medicina {
   color: white;
@@ -356,14 +375,22 @@ main .section-grids .tarjeta-administracion {
   padding-top: 0.625rem;
 }
 main .section-grids .tarjeta-administracion .administracion .titulo-tarjeta-administracion {
-  color: white;
   color: green;
-  font-family: "DM Sans", sans-serif;
+  font-family: "DM Sans";
   font-weight: 700;
   text-decoration: underline;
   font-size: 1.5625rem;
   text-align: center;
   padding-bottom: 0.625rem;
+  /*
+  color: green;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 1.5625rem;
+  text-align: center;
+  padding-bottom: .625rem;
+  */
 }
 main .section-grids .tarjeta-administracion .administracion .parrafo-superior-administracion {
   color: white;
@@ -422,14 +449,22 @@ main .section-grids .tarjeta-diseño {
   padding-top: 0.625rem;
 }
 main .section-grids .tarjeta-diseño .diseño .titulo-tarjeta-diseño {
-  color: white;
   color: orange;
-  font-family: "DM Sans", sans-serif;
+  font-family: "DM Sans";
   font-weight: 700;
   text-decoration: underline;
   font-size: 1.5625rem;
   text-align: center;
   padding-bottom: 0.625rem;
+  /*
+  color: orange;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 1.5625rem;
+  text-align: center;
+  padding-bottom: .625rem;
+  */
 }
 main .section-grids .tarjeta-diseño .diseño .parrafo-superior-diseño {
   color: white;
@@ -507,12 +542,21 @@ main .section-grids-2 {
   display: grid;
   grid-template-columns: auto 21% 21% 21% auto;
   grid-template-rows: auto;
-  grid-template-areas: ". ingenieria arquitectura programacion . ";
-  width: 100%;
+  grid-template-areas: ". ingenieria arquitectura programacion .";
   align-items: center;
   padding-top: 6.25rem;
   padding-bottom: 12.5rem;
   gap: 3.4375rem;
+  /*
+  display: grid;
+  grid-template-columns: auto 21% 21% 21% auto;
+  grid-template-rows: auto;
+  grid-template-areas: ". ingenieria arquitectura programacion . ";
+  align-items: center;
+  padding-top: 6.25rem;
+  padding-bottom: 12.5rem;
+  gap: 3.4375rem;
+  */
 }
 main .section-grids-2 .tarjeta-ingenieria a:visited {
   text-decoration: none;
@@ -531,12 +575,21 @@ main .section-grids-2 .tarjeta-ingenieria {
 }
 main .section-grids-2 .tarjeta-ingenieria a .titulo-tarjeta-ingenieria {
   color: #1d60e9;
-  font-family: "DM Sans", sans-serif;
+  font-family: "DM Sans";
   font-weight: 700;
   text-decoration: underline;
   font-size: 1.5625rem;
   text-align: center;
   padding-bottom: 0.625rem;
+  /*
+  color: #1d60e9;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 1.5625rem;
+  text-align: center;
+  padding-bottom: .625rem;
+  */
 }
 main .section-grids-2 .tarjeta-ingenieria a .parrafo-superior-ingenieria {
   color: white;
@@ -595,14 +648,22 @@ main .section-grids-2 .tarjeta-arquitectura {
   padding-top: 0.625rem;
 }
 main .section-grids-2 .tarjeta-arquitectura a .titulo-tarjeta-arquitectura {
-  color: white;
   color: green;
-  font-family: "DM Sans", sans-serif;
+  font-family: "DM Sans";
   font-weight: 700;
   text-decoration: underline;
   font-size: 1.5625rem;
   text-align: center;
   padding-bottom: 0.625rem;
+  /*
+  color: green;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 1.5625rem;
+  text-align: center;
+  padding-bottom: .625rem;
+  */
 }
 main .section-grids-2 .tarjeta-arquitectura a .parrafo-superior-arquitectura {
   color: white;
@@ -661,14 +722,22 @@ main .section-grids-2 .tarjeta-programacion {
   padding-top: 0.625rem;
 }
 main .section-grids-2 .tarjeta-programacion a .titulo-tarjeta-programacion {
-  color: white;
   color: orange;
-  font-family: "DM Sans", sans-serif;
+  font-family: "DM Sans";
   font-weight: 700;
   text-decoration: underline;
   font-size: 1.5625rem;
   text-align: center;
   padding-bottom: 0.625rem;
+  /*
+  color: orange;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 1.5625rem;
+  text-align: center;
+  padding-bottom: .625rem;
+  */
 }
 main .section-grids-2 .tarjeta-programacion a .parrafo-superior-programacion {
   color: white;
@@ -766,7 +835,6 @@ main .section-grids-3 .examen-1 {
   padding-top: 0.625rem;
 }
 main .section-grids-3 .examen-1 a .titulo-examen-1 {
-  color: white;
   color: #1d60e9;
   font-family: "DM Sans", sans-serif;
   font-weight: 700;
@@ -809,7 +877,6 @@ main .section-grids-3 .examen-2 {
   padding-top: 0.625rem;
 }
 main .section-grids-3 .examen-2 a .titulo-examen-2 {
-  color: white;
   color: green;
   font-family: "DM Sans", sans-serif;
   font-weight: 700;
@@ -868,26 +935,26 @@ main section .titulos-superiores-material h1 {
   font-weight: 700;
   text-align: start;
 }
-main .manual-2023 {
+main .manual-2023, main .formulario-2023 {
   display: grid;
   grid-template-columns: auto 25% 40% auto;
   grid-template-rows: auto;
   grid-template-areas: ". manual2023 descripcion .";
 }
-main .manual-2023 .imagen-manual-2023 {
+main .manual-2023 .imagen-manual-2023, main .formulario-2023 .imagen-manual-2023 {
   grid-area: manual2023;
 }
-main .manual-2023 .imagen-manual-2023 img {
+main .manual-2023 .imagen-manual-2023 img, main .formulario-2023 .imagen-manual-2023 img {
   width: 70%;
   margin: 20%;
 }
-main .manual-2023 .imagen-manual-2023 img:hover {
+main .manual-2023 .imagen-manual-2023 img:hover, main .formulario-2023 .imagen-manual-2023 img:hover {
   width: 72%;
 }
-main .manual-2023 .descripcion-manual-2023 {
+main .manual-2023 .descripcion-manual-2023, main .formulario-2023 .descripcion-manual-2023 {
   grid-area: descripcion;
 }
-main .manual-2023 .descripcion-manual-2023 h2 {
+main .manual-2023 .descripcion-manual-2023 h2, main .formulario-2023 .descripcion-manual-2023 h2 {
   font-family: "DM Sans", sans-serif;
   font-style: none;
   font-size: 1.875rem;
@@ -896,14 +963,14 @@ main .manual-2023 .descripcion-manual-2023 h2 {
   padding-bottom: 2.5rem;
   margin-top: 20%;
 }
-main .manual-2023 .descripcion-manual-2023 .p-1-manual {
+main .manual-2023 .descripcion-manual-2023 .p-1-manual, main .formulario-2023 .descripcion-manual-2023 .p-1-manual {
   font-family: "Quicksand", sans-serif;
   color: white;
   font-style: none;
   font-size: 1.25rem;
   text-align: center;
 }
-main .manual-2023 .descripcion-manual-2023 .p-2-manual {
+main .manual-2023 .descripcion-manual-2023 .p-2-manual, main .formulario-2023 .descripcion-manual-2023 .p-2-manual {
   font-family: "Quicksand", sans-serif;
   color: white;
   font-style: none;
@@ -935,10 +1002,7 @@ main section .boton .boton-manual:active {
   color: white;
 }
 main .formulario-2023 {
-  display: grid;
-  padding-top: 3.125rem;
-  grid-template-columns: auto 25% 40% auto;
-  grid-template-rows: auto;
+  padding-top: none;
   grid-template-areas: ". formulario2023 descripcionformulario .";
 }
 main .formulario-2023 .imagen-formulario-2023 {
@@ -1700,14 +1764,14 @@ main .recuerda {
   main section .titulos-superiores-material {
     padding-left: 6.25rem;
   }
-  main .manual-2023 {
+  main .manual-2023, main .formulario-2023 {
     grid-template-columns: auto 36% 40% auto;
     gap: 1.875rem;
   }
-  main .manual-2023 .imagen-manual-2023 {
+  main .manual-2023 .imagen-manual-2023, main .formulario-2023 .imagen-manual-2023 {
     margin: 25% 0;
   }
-  main .manual-2023 .imagen-manual-2023 img {
+  main .manual-2023 .imagen-manual-2023 img, main .formulario-2023 .imagen-manual-2023 img {
     width: 100%;
     margin: 0;
   }
@@ -1727,13 +1791,13 @@ main .recuerda {
   main section .titulos-superiores-material {
     padding-left: 5rem;
   }
-  main .manual-2023 .imagen-manual-2023 {
+  main .manual-2023 .imagen-manual-2023, main .formulario-2023 .imagen-manual-2023 {
     align-self: center;
   }
-  main .manual-2023 .descripcion-manual-2023 .p-1-manual {
+  main .manual-2023 .descripcion-manual-2023 .p-1-manual, main .formulario-2023 .descripcion-manual-2023 .p-1-manual {
     font-size: 1.0625rem;
   }
-  main .manual-2023 .descripcion-manual-2023 .p-2-manual {
+  main .manual-2023 .descripcion-manual-2023 .p-2-manual, main .formulario-2023 .descripcion-manual-2023 .p-2-manual {
     font-size: 1.0625rem;
   }
   main .formulario-2023 .imagen-formulario-2023 {
@@ -1754,16 +1818,16 @@ main .recuerda {
   main section .titulos-superiores-material h1 {
     font-size: 2.5rem;
   }
-  main .manual-2023 {
+  main .manual-2023, main .formulario-2023 {
     grid-template-columns: 1fr;
     grid-template-areas: "descripcion" "manual2023";
     margin: 0 5%;
     gap: 1.25rem;
   }
-  main .manual-2023 .imagen-manual-2023 {
+  main .manual-2023 .imagen-manual-2023, main .formulario-2023 .imagen-manual-2023 {
     margin: 0;
   }
-  main .manual-2023 .descripcion-manual-2023 .p-2-manual {
+  main .manual-2023 .descripcion-manual-2023 .p-2-manual, main .formulario-2023 .descripcion-manual-2023 .p-2-manual {
     margin-bottom: 5%;
   }
   main section .boton {
